Add persona link to workspace menu

--- a/workspace.html
+++ b/workspace.html
@@ -333,6 +333,7 @@
       <button class="ham" id="hamBtn">☰</button>
       <div class="dropdown" id="menu">
         <a href="onboarding.html">Edit profile</a>
+        <a href="persona.html">Edit Persona</a>
         <a href="#" id="deleteAccountBtn">Delete account</a>
         <a href="#" id="signoutBtn">Sign out</a>
       </div>
