--- a/onboarding.html
+++ b/onboarding.html
@@ -202,7 +202,7 @@
         <section class="js-section group-card rounded-2xl bg-slate-50 p-6 mb-8" id="sec-story" data-label="🌱 Story">
           <h2 class="text-xl font-semibold mb-4">🌱 Your Story</h2>
 
-          <div class="q-card mb-8 rounded-xl border border-slate-200 bg-white p-4 transition-shadow" data-question="journey">
+          <div class="q-card mb-8 rounded-xl border border-slate-200 bg-white p-4 transition-shadow is-active" data-question="journey">
             <div class="q-header mb-2">
               <h3 class="q-title text-lg font-medium text-slate-900">1. Your Journey So Far</h3>
               <p class="q-prompt text-sm text-slate-600 mt-1">
@@ -226,6 +226,11 @@
             </div>
 
             <div class="q-status mt-2 hidden text-xs text-emerald-600">Saved ✓</div>
+          </div>
+
+          <div id="questionControls" class="question-controls actions">
+            <button type="button" id="skipQuestionBtn" class="ghost-btn">Skip</button>
+            <button type="button" id="nextQuestionBtn" class="primary-btn">Next question →</button>
           </div>
 
           <div class="q-card mb-8 rounded-xl border border-slate-200 bg-white p-4 transition-shadow" data-question="strengths">
@@ -395,7 +400,7 @@
 
         <div class="actions">
           <button id="backBtn" class="ghost-btn" type="button">← Back</button>
-          <button id="finishBtn" class="primary-btn" type="button">Finish Setup</button>
+          <button id="finishBtn" class="primary-btn hidden" type="button">Finish Setup</button>
         </div>
       </div>
 
@@ -441,45 +446,133 @@
       textarea.addEventListener('input', showSaved);
     });
 
-    // Scroll spy for tabs
-    const sections = document.querySelectorAll('.js-section');
-    const tabButtons = document.querySelectorAll('.step2-tab');
+    // Step 2 question flow controller
+    (() => {
+      const sections = Array.from(document.querySelectorAll('.js-section'));
+      const tabButtons = Array.from(document.querySelectorAll('.step2-tab'));
+      const questionControls = document.getElementById('questionControls');
+      const skipQuestionBtn = document.getElementById('skipQuestionBtn');
+      const nextQuestionBtn = document.getElementById('nextQuestionBtn');
+      const finishBtn = document.getElementById('finishBtn');
+      const tabBar = document.querySelector('.step2-tab-bar');
 
-    const setActiveTab = (sectionId) => {
-      tabButtons.forEach((btn) => {
-        const isActive = btn.dataset.section === sectionId;
-        btn.classList.toggle('is-active', isActive);
-        btn.setAttribute('aria-selected', isActive ? 'true' : 'false');
-      });
-    };
+      if (!sections.length || !questionControls) {
+        return;
+      }
 
-    tabButtons.forEach((btn) => {
-      btn.addEventListener('click', () => {
-        const sectionId = btn.dataset.section;
-        const target = document.getElementById(sectionId);
-        if (!target) return;
-        setActiveTab(sectionId);
-        target.scrollIntoView({ behavior: 'smooth', block: 'start' });
-      });
-    });
+      const questions = sections.flatMap((section) =>
+        Array.from(section.querySelectorAll('.q-card')).map((card) => ({ card, section }))
+      );
 
-    const spy = () => {
-      let activeId = sections.length ? sections[0].id : null;
-      sections.forEach((sec) => {
-        const rect = sec.getBoundingClientRect();
-        if (rect.top <= 160 && rect.bottom >= 220) {
-          activeId = sec.id;
+      if (!questions.length) {
+        return;
+      }
+
+      let activeIndex = questions.findIndex(({ card }) => card.classList.contains('is-active'));
+      if (activeIndex < 0) {
+        activeIndex = 0;
+      }
+
+      const sectionFirstIndex = new Map();
+      questions.forEach(({ section }, index) => {
+        if (section?.id && !sectionFirstIndex.has(section.id)) {
+          sectionFirstIndex.set(section.id, index);
         }
       });
-      if (activeId) {
-        setActiveTab(activeId);
-      }
-    };
 
-    if (sections.length && tabButtons.length) {
-      document.addEventListener('scroll', spy, { passive: true });
-      window.addEventListener('load', spy);
-    }
+      const setActiveTab = (sectionId) => {
+        tabButtons.forEach((btn) => {
+          const isActive = btn.dataset.section === sectionId;
+          btn.classList.toggle('is-active', isActive);
+          btn.setAttribute('aria-selected', isActive ? 'true' : 'false');
+        });
+      };
+
+      const scrollActiveCardIntoView = () => {
+        const { card } = questions[activeIndex];
+        const tabBarHeight = tabBar ? tabBar.getBoundingClientRect().height : 0;
+        const offset = tabBarHeight + 24;
+        const targetTop = card.getBoundingClientRect().top + window.scrollY - offset;
+        window.scrollTo({ top: targetTop >= 0 ? targetTop : 0, behavior: 'smooth' });
+      };
+
+      const updateState = ({ scroll = true } = {}) => {
+        const activeQuestion = questions[activeIndex];
+        if (!activeQuestion) {
+          return;
+        }
+
+        questions.forEach(({ card }, index) => {
+          const isActive = index === activeIndex;
+          card.classList.toggle('hidden', !isActive);
+          card.classList.toggle('is-active', isActive);
+        });
+
+        sections.forEach((section) => {
+          const isActiveSection = section === activeQuestion.section;
+          section.classList.toggle('hidden', !isActiveSection);
+          section.classList.toggle('is-active', isActiveSection);
+        });
+
+        setActiveTab(activeQuestion.section?.id || '');
+
+        if (questionControls && activeQuestion.card.parentElement) {
+          activeQuestion.card.parentElement.insertBefore(
+            questionControls,
+            activeQuestion.card.nextElementSibling
+          );
+          questionControls.classList.remove('hidden');
+        }
+
+        const isLast = activeIndex === questions.length - 1;
+        if (nextQuestionBtn) {
+          nextQuestionBtn.classList.toggle('hidden', isLast);
+        }
+        if (finishBtn) {
+          finishBtn.classList.toggle('hidden', !isLast);
+        }
+
+        if (scroll) {
+          scrollActiveCardIntoView();
+        }
+      };
+
+      const goToIndex = (index, options = {}) => {
+        if (index < 0 || index >= questions.length) {
+          return;
+        }
+        if (index === activeIndex) {
+          updateState(options);
+          return;
+        }
+        activeIndex = index;
+        updateState(options);
+      };
+
+      skipQuestionBtn?.addEventListener('click', () => {
+        if (activeIndex < questions.length - 1) {
+          goToIndex(activeIndex + 1);
+        }
+      });
+
+      nextQuestionBtn?.addEventListener('click', () => {
+        if (activeIndex < questions.length - 1) {
+          goToIndex(activeIndex + 1);
+        }
+      });
+
+      tabButtons.forEach((btn) => {
+        btn.addEventListener('click', () => {
+          const targetSection = btn.dataset.section;
+          if (!targetSection || !sectionFirstIndex.has(targetSection)) {
+            return;
+          }
+          goToIndex(sectionFirstIndex.get(targetSection));
+        });
+      });
+
+      updateState({ scroll: false });
+    })();
   </script>
 
   <script src="scripts/theme.js"></script>
