Use example text as onboarding placeholders

--- a/onboarding.html
+++ b/onboarding.html
@@ -216,14 +216,8 @@
               name="journey"
               rows="4"
               class="q-input w-full rounded-lg border border-slate-300 p-3 focus:outline-none focus:ring-2 focus:ring-sky-300"
-              placeholder="Share how your career began and the moments that shaped you."
+              placeholder="💡 Example: “I started as a graphic designer but fell in love with storytelling, which pulled me toward marketing.”"
             ></textarea>
-
-            <div class="q-example mt-3 pl-3 border-l-2 border-slate-200">
-              <p class="text-xs italic text-slate-500">
-                💡 Example: “I started as a graphic designer but fell in love with storytelling, which pulled me toward marketing.”
-              </p>
-            </div>
 
             <div class="q-status mt-2 hidden text-xs text-emerald-600">Saved ✓</div>
           </div>
@@ -247,14 +241,8 @@
               name="strengths"
               rows="4"
               class="q-input w-full rounded-lg border border-slate-300 p-3 focus:outline-none focus:ring-2 focus:ring-sky-300"
-              placeholder="Share the strengths or superpowers you're known for."
+              placeholder="💡 Example: “My curiosity pushes me to learn fast — it’s how I taught myself Python and automated my team’s reports.”"
             ></textarea>
-
-            <div class="q-example mt-3 pl-3 border-l-2 border-slate-200">
-              <p class="text-xs italic text-slate-500">
-                💡 Example: “My curiosity pushes me to learn fast — it’s how I taught myself Python and automated my team’s reports.”
-              </p>
-            </div>
 
             <div class="q-status mt-2 hidden text-xs text-emerald-600">Saved ✓</div>
           </div>
@@ -277,14 +265,8 @@
               name="flow"
               rows="4"
               class="q-input w-full rounded-lg border border-slate-300 p-3 focus:outline-none focus:ring-2 focus:ring-sky-300"
-              placeholder="Describe the work that makes time fly and the problems you love solving."
+              placeholder="💡 Example: “I love turning messy processes into simple systems — like trimming a 50-step onboarding into three steps.”"
             ></textarea>
-
-            <div class="q-example mt-3 pl-3 border-l-2 border-slate-200">
-              <p class="text-xs italic text-slate-500">
-                💡 Example: “I love turning messy processes into simple systems — like trimming a 50-step onboarding into three steps.”
-              </p>
-            </div>
 
             <div class="q-status mt-2 hidden text-xs text-emerald-600">Saved ✓</div>
           </div>
@@ -303,14 +285,8 @@
               name="nextRole"
               rows="4"
               class="q-input w-full rounded-lg border border-slate-300 p-3 focus:outline-none focus:ring-2 focus:ring-sky-300"
-              placeholder="Imagine the work, impact, or feeling you want next."
+              placeholder="💡 Example: “I’m ready for product strategy work — building tools people enjoy instead of tolerate.”"
             ></textarea>
-
-            <div class="q-example mt-3 pl-3 border-l-2 border-slate-200">
-              <p class="text-xs italic text-slate-500">
-                💡 Example: “I’m ready for product strategy work — building tools people enjoy instead of tolerate.”
-              </p>
-            </div>
 
             <div class="q-status mt-2 hidden text-xs text-emerald-600">Saved ✓</div>
           </div>
@@ -329,14 +305,8 @@
               name="environment"
               rows="4"
               class="q-input w-full rounded-lg border border-slate-300 p-3 focus:outline-none focus:ring-2 focus:ring-sky-300"
-              placeholder="Describe the team, culture, or environment where you thrive."
+              placeholder="💡 Example: “I thrive in small, ownership-driven teams where experimenting — and learning fast — is celebrated.”"
             ></textarea>
-
-            <div class="q-example mt-3 pl-3 border-l-2 border-slate-200">
-              <p class="text-xs italic text-slate-500">
-                💡 Example: “I thrive in small, ownership-driven teams where experimenting — and learning fast — is celebrated.”
-              </p>
-            </div>
 
             <div class="q-status mt-2 hidden text-xs text-emerald-600">Saved ✓</div>
           </div>
@@ -359,14 +329,8 @@
               name="vision"
               rows="4"
               class="q-input w-full rounded-lg border border-slate-300 p-3 focus:outline-none focus:ring-2 focus:ring-sky-300"
-              placeholder="Share the growth or milestones you hope to reach in the coming years."
+              placeholder="💡 Example: “In five years I want to lead a small product team, mentor others, and build something meaningful.”"
             ></textarea>
-
-            <div class="q-example mt-3 pl-3 border-l-2 border-slate-200">
-              <p class="text-xs italic text-slate-500">
-                💡 Example: “In five years I want to lead a small product team, mentor others, and build something meaningful.”
-              </p>
-            </div>
 
             <div class="q-status mt-2 hidden text-xs text-emerald-600">Saved ✓</div>
           </div>
@@ -385,14 +349,8 @@
               name="beyondResume"
               rows="4"
               class="q-input w-full rounded-lg border border-slate-300 p-3 focus:outline-none focus:ring-2 focus:ring-sky-300"
-              placeholder="Share the passions or projects that influence how you work."
+              placeholder="💡 Example: “I run a tiny travel blog that keeps my storytelling sharp and helps me notice details others miss.”"
             ></textarea>
-
-            <div class="q-example mt-3 pl-3 border-l-2 border-slate-200">
-              <p class="text-xs italic text-slate-500">
-                💡 Example: “I run a tiny travel blog that keeps my storytelling sharp and helps me notice details others miss.”
-              </p>
-            </div>
 
             <div class="q-status mt-2 hidden text-xs text-emerald-600">Saved ✓</div>
           </div>
