--- a/onboarding.html
+++ b/onboarding.html
@@ -64,6 +64,8 @@
     .actions{display:flex;gap:12px;margin-top:32px;flex-wrap:wrap}
     .primary-btn{background:linear-gradient(135deg,var(--brand),var(--brand-accent));color:#fff;border:none;border-radius:14px;padding:12px 22px;font-weight:600;font-size:15px;cursor:pointer;box-shadow:var(--shadow-sm);transition:transform .2s ease,box-shadow .2s ease}
     .primary-btn:hover{transform:translateY(-1px);box-shadow:0 18px 32px rgba(10,102,194,0.2)}
+    .primary-btn:disabled{opacity:0.55;cursor:not-allowed;transform:none;box-shadow:none}
+    .primary-btn:disabled:hover{transform:none;box-shadow:none}
     .ghost-btn{background:rgba(255,255,255,0.85);color:var(--brand-strong);border:1px solid rgba(10,102,194,0.16);border-radius:14px;padding:12px 22px;font-weight:600;font-size:15px;cursor:pointer;transition:background .2s ease,box-shadow .2s ease}
     .ghost-btn:hover{background:rgba(10,102,194,0.08);box-shadow:0 10px 22px rgba(10,102,194,0.12)}
     .hidden{display:none}
@@ -446,6 +448,19 @@
         });
       };
 
+      const updateNextButtonState = () => {
+        if (!nextQuestionBtn) {
+          return;
+        }
+
+        const activeQuestion = questions[activeIndex];
+        const textarea = activeQuestion?.card.querySelector('textarea');
+        const hasValue = Boolean(textarea && textarea.value.trim());
+
+        nextQuestionBtn.disabled = !hasValue;
+        nextQuestionBtn.setAttribute('aria-disabled', nextQuestionBtn.disabled ? 'true' : 'false');
+      };
+
       const scrollActiveCardIntoView = () => {
         const { card } = questions[activeIndex];
         const tabBarHeight = tabBar ? tabBar.getBoundingClientRect().height : 0;
@@ -490,6 +505,8 @@
           finishBtn.classList.toggle('hidden', !isLast);
         }
 
+        updateNextButtonState();
+
         if (scroll) {
           scrollActiveCardIntoView();
         }
@@ -501,10 +518,12 @@
         }
         if (index === activeIndex) {
           updateState(options);
+          updateNextButtonState();
           return;
         }
         activeIndex = index;
         updateState(options);
+        updateNextButtonState();
       };
 
       skipQuestionBtn?.addEventListener('click', () => {
@@ -529,7 +548,18 @@
         });
       });
 
+      questions.forEach(({ card }) => {
+        const textarea = card.querySelector('textarea');
+        if (!textarea) {
+          return;
+        }
+        textarea.addEventListener('input', () => {
+          updateNextButtonState();
+        });
+      });
+
       updateState({ scroll: false });
+      updateNextButtonState();
     })();
   </script>
 
