--- a/persona.html
+++ b/persona.html
@@ -4,9 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Persona Profile</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="styles/theme.css" />
   <link rel="stylesheet" href="persona.css" />
 </head>
 <body>
+  <div class="floating" aria-hidden="true"></div>
+  <div class="floating" aria-hidden="true"></div>
+  <div class="floating" aria-hidden="true"></div>
   <div class="page-shell">
     <header class="page-header" id="page-header">
       <div class="header-copy">
