Add sprint readiness CTA to persona page

--- a/persona.html
+++ b/persona.html
@@ -126,6 +126,9 @@
   <footer class="footer-nav" aria-label="Persona navigation">
     <div class="footer-actions">
       <button class="btn ghost" id="nav-back" type="button">Back</button>
+      <button class="btn primary" id="nav-readiness" type="button" hidden>
+        Continue to Sprint Readiness
+      </button>
       <button class="btn primary" id="nav-workspace" type="button">Open Workspace</button>
     </div>
   </footer>
