--- a/workspace.html
+++ b/workspace.html
@@ -17,6 +17,8 @@
   *{box-sizing:border-box}
   body{margin:0;font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:linear-gradient(120deg,var(--bg1),var(--bg2));color:var(--ink)}
   .app{min-height:100vh;display:flex;flex-direction:column;padding-left:var(--coach-summary-width);transition:margin-left .32s ease,padding-left .32s ease}
+  .workspace-main{flex:1;display:flex;flex-direction:column;min-height:0}
+  .board-region{flex:1;display:flex;flex-direction:column;min-height:0;position:relative;padding-bottom:0}
 
   /* Topbar */
   .top{
@@ -55,8 +57,10 @@
     --lane-peek:.5;
     --lane-width:calc((100% - (var(--lanes-visible) * var(--lane-gap))) / (var(--lanes-visible) + var(--lane-peek)));
     max-width:1200px;
-    margin:14px auto;
-    padding:0 16px 40px;
+    flex:1;
+    min-height:0;
+    margin:14px auto 0;
+    padding:12px 16px 8px;
     display:flex;
     gap:var(--lane-gap);
     align-items:stretch;
@@ -69,11 +73,26 @@
   .board::-webkit-scrollbar{height:8px}
   .board::-webkit-scrollbar-thumb{background:rgba(15,62,124,.28);border-radius:999px}
   .board::-webkit-scrollbar-track{background:rgba(15,62,124,.08);border-radius:999px}
+  .board::after{
+    content:"";
+    position:sticky;
+    right:0;
+    top:12px;
+    bottom:8px;
+    align-self:stretch;
+    width:72px;
+    margin-left:-72px;
+    display:block;
+    pointer-events:none;
+    background:linear-gradient(90deg,rgba(240,246,255,0),rgba(224,237,255,.92));
+    border-radius:0 18px 18px 0;
+  }
   .lane{
     background:rgba(255,255,255,.92);
     border:1px solid #c8d9f4;
     border-radius:18px;
     min-height:360px;
+    height:100%;
     display:flex;
     flex-direction:column;
     flex:0 0 var(--lane-width);
@@ -225,11 +244,11 @@
   .coach-icon-btn:hover{background:#edf4ff}
   .coach-tips{margin:0;padding-left:18px;display:flex;flex-direction:column;gap:6px;color:#2c4f80;font-size:13px}
   .coach-footer{text-align:center;font-size:11px;color:#4a6ba3;padding-bottom:10px;display:flex;flex-direction:column;gap:4px}
-  .coach-summary{position:fixed;left:0;top:var(--topbar-height);width:var(--coach-summary-width);height:calc(100vh - var(--topbar-height));z-index:34;display:flex;align-items:center;justify-content:center;padding:0;background:rgba(255,255,255,.95);border:1px solid #c8d9f4;border-left:0;border-radius:0 14px 14px 0;box-shadow:var(--shadow);overflow:hidden;transition:box-shadow .2s ease,opacity .2s ease,background .2s ease}
+  .coach-summary{position:fixed;left:0;top:0;width:var(--coach-summary-width);height:100vh;z-index:34;display:flex;align-items:center;justify-content:center;padding:0;background:rgba(255,255,255,.95);border:1px solid #c8d9f4;border-left:0;border-radius:0 10px 10px 0;box-shadow:var(--shadow);overflow:hidden;transition:box-shadow .2s ease,opacity .2s ease,background .2s ease}
   .coach-summary:focus-within{box-shadow:0 12px 28px rgba(10,102,194,.2)}
   .coach-summary.coach-open{opacity:0;pointer-events:none;box-shadow:none;background:transparent}
-  .coach-summary-toggle{width:100%;height:100%;background:linear-gradient(180deg,#0a66c2,#084a91);color:#fff;border:0;border-radius:0;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:inset -1px 0 0 rgba(255,255,255,.25),0 6px 16px rgba(10,102,194,.25);transition:background .2s ease,box-shadow .2s ease}
-  .coach-summary-toggle:hover,.coach-summary-toggle:focus-visible{background:linear-gradient(180deg,#0d7ae0,#0a5ab3);box-shadow:inset -1px 0 0 rgba(255,255,255,.3),0 8px 18px rgba(10,102,194,.28)}
+  .coach-summary-toggle{width:100%;height:100%;background:linear-gradient(160deg,#eef5ff,#e4f0ff);color:#0f3e7c;border:0;border-radius:0 10px 10px 0;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:inset -1px 0 0 rgba(255,255,255,.5),0 6px 16px rgba(10,102,194,.18);transition:background .2s ease,box-shadow .2s ease}
+  .coach-summary-toggle:hover,.coach-summary-toggle:focus-visible{background:linear-gradient(160deg,#f4f8ff,#e9f1ff);box-shadow:inset -1px 0 0 rgba(255,255,255,.6),0 8px 18px rgba(10,102,194,.22)}
   .coach-summary-toggle:focus-visible{outline:2px solid #0d7ae0;outline-offset:0}
   .coach-summary.coach-open .coach-summary-toggle{display:none}
   .coach-summary-chevron{font-size:20px;font-weight:700;line-height:1;text-shadow:0 1px 0 rgba(0,0,0,.25)}
@@ -319,41 +338,43 @@
     </div>
   </aside>
   <!-- top bar -->
-  <div class="top">
-    <div class="topin">
-      <div class="brand">
-        <div class="badge"><img src="logo_illustration.png" alt="JobSprint logo" loading="lazy"></div>
-        <div>
-          <div style="font-weight:700;">JobSprint</div>
-          <div id="userLine" style="font-size:12px;color:#2c4f80;">Welcome back</div>
+  <div class="workspace-main">
+    <div class="top">
+      <div class="topin">
+        <div class="brand">
+          <div class="badge"><img src="logo_illustration.png" alt="JobSprint logo" loading="lazy"></div>
+          <div>
+            <div style="font-weight:700;">JobSprint</div>
+            <div id="userLine" style="font-size:12px;color:#2c4f80;">Welcome back</div>
+          </div>
+        </div>
+        <div class="navspacer"></div>
+        <button class="pill-button" id="goalPill" type="button">Goal: <strong id="goalNum">4</strong> / day</button>
+        <button class="ham" id="hamBtn">☰</button>
+        <div class="dropdown" id="menu">
+          <a href="onboarding.html">Edit profile</a>
+          <a href="persona.html">Edit Persona</a>
+          <a href="#" id="deleteAccountBtn">Delete account</a>
+          <a href="#" id="signoutBtn">Sign out</a>
         </div>
       </div>
-      <div class="navspacer"></div>
-      <button class="pill-button" id="goalPill" type="button">Goal: <strong id="goalNum">4</strong> / day</button>
-      <button class="ham" id="hamBtn">☰</button>
-      <div class="dropdown" id="menu">
-        <a href="onboarding.html">Edit profile</a>
-        <a href="persona.html">Edit Persona</a>
-        <a href="#" id="deleteAccountBtn">Delete account</a>
-        <a href="#" id="signoutBtn">Sign out</a>
-      </div>
     </div>
-  </div>
 
-  <!-- header stats -->
-  <div class="head">
-    <div class="stat">Today’s applications: <strong id="todayCount">0</strong></div>
-    <div class="stat">This week: <strong id="weekCount">0</strong></div>
-    <button class="btn ghost" id="resetBtn">Reset board</button>
-  </div>
+    <!-- header stats -->
+    <div class="head">
+      <div class="stat">Today’s applications: <strong id="todayCount">0</strong></div>
+      <div class="stat">This week: <strong id="weekCount">0</strong></div>
+      <button class="btn ghost" id="resetBtn">Reset board</button>
+    </div>
 
-  <!-- board -->
-  <div class="board" id="board">
-    <div class="lane" data-col="research">
-      <div class="lanehead">
-        <div class="lanehead-top"><h3>Research / To Apply</h3><span class="count" data-count="research">0</span></div>
-        <p class="lane-desc">Track roles you&rsquo;re exploring, prepping, or yet to apply for.</p>
-      </div>
+    <!-- board -->
+    <div class="board-region">
+      <div class="board" id="board">
+        <div class="lane" data-col="research">
+          <div class="lanehead">
+            <div class="lanehead-top"><h3>Research / To Apply</h3><span class="count" data-count="research">0</span></div>
+            <p class="lane-desc">Track roles you&rsquo;re exploring, prepping, or yet to apply for.</p>
+          </div>
       <div class="lane-actions">
         <button class="btn lane-add" id="addBtn" type="button">+ Add Application</button>
       </div>
@@ -392,16 +413,17 @@
       <div class="cards" data-drop="offer"></div>
       <div class="empty">Drag Applications here</div>
     </div>
-    <div class="lane" data-col="rejected">
-      <div class="lanehead">
-        <div class="lanehead-top"><h3>Rejected</h3><span class="count" data-count="rejected">0</span></div>
-        <p class="lane-desc">Move your application to this stage when the process didn&rsquo;t move forward or the company declined your application.</p>
+        <div class="lane" data-col="rejected">
+          <div class="lanehead">
+            <div class="lanehead-top"><h3>Rejected</h3><span class="count" data-count="rejected">0</span></div>
+            <p class="lane-desc">Move your application to this stage when the process didn&rsquo;t move forward or the company declined your application.</p>
+          </div>
+          <div class="cards" data-drop="rejected"></div>
+          <div class="empty">Drag Applications here</div>
+        </div>
       </div>
-      <div class="cards" data-drop="rejected"></div>
-      <div class="empty">Drag Applications here</div>
     </div>
   </div>
-</div>
 
 <!-- modal -->
 <div class="modalBG" id="modalBG" aria-hidden="true">
