--- a/persona.html
+++ b/persona.html
@@ -1,164 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Persona Profile</title>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
-    rel="stylesheet"
-  />
-  <link rel="stylesheet" href="styles/theme.css" />
-  <link rel="stylesheet" href="persona.css" />
-</head>
-<body>
-  <div class="floating" aria-hidden="true"></div>
-  <div class="floating" aria-hidden="true"></div>
-  <div class="floating" aria-hidden="true"></div>
-  <div class="page-shell">
-    <header class="page-header" id="page-header">
-      <div class="header-copy">
-        <p class="eyebrow">AI Persona</p>
-        <h1 class="page-title">Your Sprint Persona</h1>
-        <p class="page-subtitle">A tailored snapshot of strengths, motivations, and next-step focus areas for this candidate.</p>
-      </div>
-      <div class="header-actions">
-        <button class="btn primary" id="btn-regenerate" type="button">Regenerate</button>
-        <button class="btn ghost" id="btn-download" type="button">Download</button>
-        <button class="btn ghost" id="btn-share" type="button">Share</button>
-      </div>
-    </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Your Sprint Persona</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
+    />
+    <link rel="stylesheet" href="persona.css" />
+  </head>
+  <body>
+    <div class="page">
+      <header class="page-header">
+        <h1>Your Sprint Persona</h1>
+        <p id="source-chip" class="source-chip" role="status" aria-live="polite">
+          Loading source…
+        </p>
+      </header>
 
-    <main class="page-main" id="page-main">
-      <section id="persona-snapshot" class="card persona-snapshot is-loading" data-skeleton>
-        <header class="snapshot-header">
-          <div class="snapshot-identity">
-            <p class="snapshot-eyebrow">Sprint Persona</p>
-            <h2 id="snapshot-name" class="snapshot-name skeleton-text"></h2>
-            <p id="snapshot-role" class="snapshot-role skeleton-text"></p>
+      <main>
+        <section class="story-section" aria-label="User persona story">
+          <div id="error-banner" class="error-banner" role="alert" hidden>
+            <span>Couldn’t load persona.</span>
+            <button type="button" id="retry-btn" class="link-button">Retry</button>
           </div>
-          <button id="btn-edit-persona" class="snapshot-edit" type="button">Edit</button>
-        </header>
-        <div class="snapshot-summary-block">
-          <p id="snapshot-summary" class="snapshot-summary skeleton-text"></p>
-          <p id="snapshot-hint" class="snapshot-hint skeleton-text" aria-live="polite"></p>
-        </div>
-        <dl class="snapshot-meta">
-          <div>
-            <dt>Experience</dt>
-            <dd id="snapshot-experience" class="skeleton-text"></dd>
+
+          <div id="story-card" class="story-card is-loading">
+            <div id="story" class="story-body" aria-live="polite">
+              <div class="skeleton-line"></div>
+              <div class="skeleton-line"></div>
+              <div class="skeleton-line"></div>
+              <div class="skeleton-line"></div>
+            </div>
+            <button id="clamp-toggle" type="button" class="link-button" hidden>
+              Expand
+            </button>
           </div>
-          <div>
-            <dt>Location</dt>
-            <dd id="snapshot-location" class="skeleton-text"></dd>
-          </div>
-          <div>
-            <dt>Focus</dt>
-            <dd id="snapshot-focus" class="skeleton-text"></dd>
-          </div>
-        </dl>
-        <div class="snapshot-points-wrap">
-          <p class="snapshot-points-label">Highlights</p>
-          <ul id="snapshot-points" class="snapshot-points">
-            <li class="skeleton-text"></li>
-            <li class="skeleton-text"></li>
-            <li class="skeleton-text"></li>
-          </ul>
-        </div>
-      </section>
-
-      <section id="ai-summary" class="card is-loading" data-skeleton>
-        <header class="section-header">
-          <div>
-            <h2>AI Summary</h2>
-            <p class="section-subtitle">Key takeaways synthesised across signals.</p>
-          </div>
-          <p class="source-hint" id="summary-hint" role="status"></p>
-        </header>
-        <p id="persona-summary" class="body-text skeleton-text"></p>
-      </section>
-
-      <section id="badge-row" class="badge-row card is-loading" data-skeleton aria-label="Persona highlights">
-        <h2 class="visually-hidden">Persona Highlights</h2>
-        <div class="badges" id="badge-list"></div>
-      </section>
-
-      <section class="accordion" id="sec-journey" data-accordion>
-        <h2 class="accordion-heading">Career Journey</h2>
-        <button type="button" class="accordion-trigger" aria-expanded="false" aria-controls="panel-journey" id="trigger-journey">
-          <span class="trigger-label">Career Journey</span>
-          <span class="trigger-preview" data-preview="journey"></span>
-          <span class="trigger-icon" aria-hidden="true"></span>
-        </button>
-        <div id="panel-journey" class="accordion-panel" role="region" aria-labelledby="trigger-journey" hidden>
-          <div class="accordion-body" id="journey-body"></div>
-        </div>
-      </section>
-
-      <section class="accordion" id="sec-strengths" data-accordion>
-        <h2 class="accordion-heading">Strengths</h2>
-        <button type="button" class="accordion-trigger" aria-expanded="false" aria-controls="panel-strengths" id="trigger-strengths">
-          <span class="trigger-label">Strengths</span>
-          <span class="trigger-preview" data-preview="strengths"></span>
-          <span class="trigger-icon" aria-hidden="true"></span>
-        </button>
-        <div id="panel-strengths" class="accordion-panel" role="region" aria-labelledby="trigger-strengths" hidden>
-          <div class="accordion-body" id="strengths-body"></div>
-        </div>
-      </section>
-
-      <section class="accordion" id="sec-effortless" data-accordion>
-        <h2 class="accordion-heading">What Comes Effortlessly</h2>
-        <button type="button" class="accordion-trigger" aria-expanded="false" aria-controls="panel-effortless" id="trigger-effortless">
-          <span class="trigger-label">What Comes Effortlessly</span>
-          <span class="trigger-preview" data-preview="effortless"></span>
-          <span class="trigger-icon" aria-hidden="true"></span>
-        </button>
-        <div id="panel-effortless" class="accordion-panel" role="region" aria-labelledby="trigger-effortless" hidden>
-          <div class="accordion-body" id="effortless-body"></div>
-        </div>
-      </section>
-
-      <section class="accordion" id="sec-next" data-accordion>
-        <h2 class="accordion-heading">Recommended Next Steps</h2>
-        <button type="button" class="accordion-trigger" aria-expanded="false" aria-controls="panel-next" id="trigger-next">
-          <span class="trigger-label">Recommended Next Steps</span>
-          <span class="trigger-preview" data-preview="next"></span>
-          <span class="trigger-icon" aria-hidden="true"></span>
-        </button>
-        <div id="panel-next" class="accordion-panel" role="region" aria-labelledby="trigger-next" hidden>
-          <div class="accordion-body" id="next-body"></div>
-        </div>
-      </section>
-    </main>
-  </div>
-
-  <footer class="footer-nav" aria-label="Persona navigation">
-    <div class="footer-actions">
-      <button class="btn ghost" id="nav-back" type="button">Back</button>
-      <button class="btn primary" id="nav-workspace" type="button">Open Workspace</button>
+        </section>
+      </main>
     </div>
-  </footer>
 
-  <dialog id="regenerate-modal" class="regenerate-modal" aria-labelledby="regenerate-title">
-    <form method="dialog" class="modal-surface">
-      <h2 id="regenerate-title">Regenerate persona?</h2>
-      <p>Refreshing will replace the current insights with a newly generated persona.</p>
-      <menu class="modal-actions">
-        <button class="btn ghost" value="cancel">Cancel</button>
-        <button class="btn primary" value="confirm">Regenerate</button>
-      </menu>
-    </form>
-  </dialog>
+    <footer class="action-footer" aria-label="Persona actions">
+      <p id="first-time-note" class="first-time-note" hidden>
+        You can refine this later from Workspace → Edit Persona.
+      </p>
+      <div class="action-row">
+        <div class="action-left">
+          <button id="btn-edit" class="btn primary" type="button" aria-label="Edit persona story">
+            Edit Persona
+          </button>
+          <button id="btn-download" class="btn text" type="button" aria-label="Download persona as text">
+            Download .txt
+          </button>
+        </div>
+        <button id="btn-open-workspace" class="btn secondary" type="button" aria-label="Open workspace">
+          Open Workspace
+        </button>
+      </div>
+    </footer>
 
-  <template id="accordion-list-template">
-    <ul class="text-list"></ul>
-  </template>
+    <div id="persona-modal" class="modal" role="dialog" aria-modal="true" aria-labelledby="modal-title" hidden>
+      <div class="modal-backdrop" data-close></div>
+      <div class="modal-panel" role="document">
+        <header>
+          <h2 id="modal-title">Edit persona story</h2>
+        </header>
+        <label class="visually-hidden" for="persona-editor">Persona story</label>
+        <textarea id="persona-editor" rows="10"></textarea>
+        <div class="modal-links">
+          <a href="onboarding.html">Update answers instead</a>
+        </div>
+        <div class="modal-actions">
+          <button type="button" id="modal-cancel" class="btn secondary">Cancel</button>
+          <button type="button" id="modal-save" class="btn primary">Save</button>
+        </div>
+      </div>
+    </div>
 
-  <template id="badge-template">
-    <span class="badge"></span>
-  </template>
-
-  <script src="persona.js" type="module"></script>
-</body>
+    <script src="persona.js" type="module"></script>
+  </body>
 </html>
